完成表格分页

--- a/src/main/resources/templates/order/order_item.html
+++ b/src/main/resources/templates/order/order_item.html
@@ -14,18 +14,42 @@
     </script>
     <script type="application/javascript" th:src="@{/layui/layui.all.js}"></script>
     <script>
-        layui.use('table', function () {
-            var table = layui.table;
+        layui.config({
+            version: '1535898708529' //为了更新 js 缓存，可忽略
+        });
 
-            //执行一个 table 实例
+        var table, laypage, page = 1, size = 10;
+        layui.use(['table', 'laypage'], function () {
+            table = layui.table;
+            laypage = layui.laypage;
+
+            initTable();
+
+            table.on('tool(test)', function (obj) {
+                var data = obj.data, layEvent = obj.event;
+                if (layEvent === 'detail') {
+                    layer.msg('查看操作');
+                } else if (layEvent === 'del') {
+                    layer.confirm('真的删除行么', function (index) {
+                        obj.del(); //删除对应行（tr）的DOM结构
+                        layer.close(index);
+                        //向服务端发送删除指令
+                    });
+                } else if (layEvent === 'edit') {
+                    layer.msg('编辑操作');
+                }
+            });
+        });
+
+        function initTable() {
             table.render({
                 elem: "#order_detail",
-                height: 640,
+                height: 511,
                 url: "http://localhost:8080/lilun/order/list",
-                title: "订单详情表",
-                page: true,
-                toolbar: 'default',
                 totalRow: false,
+                even: true,
+                loading: true,
+                page: true,
                 cols: [
                     [
                         {field: 'id', title: 'ID', sort: true},
@@ -39,9 +63,31 @@
                         {field: 'wealth', title: '财富', sort: true},
                         {field: 'right', title: '操作', toolbar: "#operation"}
                     ]
-                ]
+                ],
+                done: doneCallback,
             });
-        });
+        }
+
+        function doneCallback(res, curr, count) {
+            laypage.render({
+                elem: "#order_detail",
+                count: count,
+                curr: page,
+                limit: size,
+                limits: [10, 20, 30],
+                prev: "<<",
+                next: ">>",
+                theme: "#0099ff",
+                layout: ['count', 'prev', 'page', 'next', 'limit', 'skip'],
+                jump: function (obj, first) {
+                    if (!first) {
+                        page = obj.curr;
+                        size = obj.limit;
+                        initTable();
+                    }
+                }
+            });
+        }
     </script>
 </div>
 </body>
