从后台获取菜单

--- a/src/main/resources/templates/common/layout.html
+++ b/src/main/resources/templates/common/layout.html
@@ -18,7 +18,7 @@
 
     <!--layui-body start-->
     <div class="layui-body">
-        <div class="layui-content-container" layout:fragment="content_container"></div>
+        <div class="layui-content-container" th:include="order/order_item::content_container"></div>
     </div>
     <!--end layui-body-->
 
