--- a/src/main/resources/templates/order/order_item.html
+++ b/src/main/resources/templates/order/order_item.html
@@ -5,7 +5,7 @@
     <title>Graduation Design</title>
 </head>
 <body>
-<div layout:fragment="content_container">
+<div th:fragment="content_container">
     <table class="layui-hide" id="order_detail" lay-filter="test"></table>
     <script type="text/html" id="operation">
         <a class="layui-btn layui-btn-primary layui-btn-mini" lay-event="detail">查看</a>
