--- a/src/main/resources/templates/common/layout_sider.html
+++ b/src/main/resources/templates/common/layout_sider.html
@@ -7,26 +7,13 @@
 <body>
 <div th:fragment="menu">
     <div class="layui-side-scroll">
-        <ul class="layui-nav layui-nav-tree" lay-filter="test">
-            <li class="layui-nav-item layui-nav-itemed">
-                <a class="" href="javascript:;">所有商品</a>
-                <dl class="layui-nav-child">
-                    <dd><a href="javascript:;">列表一</a></dd>
-                    <dd><a href="javascript:;">列表二</a></dd>
-                    <dd><a href="javascript:;">列表三</a></dd>
-                    <dd><a href="">超链接</a></dd>
-                </dl>
-            </li>
+        <ul class="layui-nav layui-nav-tree" lay-filter="test" th:each="menu : ${menus}">
             <li class="layui-nav-item">
-                <a href="javascript:;">解决方案</a>
-                <dl class="layui-nav-child">
-                    <dd><a href="javascript:;">列表一</a></dd>
-                    <dd><a href="javascript:;">列表二</a></dd>
-                    <dd><a href="">超链接</a></dd>
-                </dl>
+                <a th:href="${menu.url}">
+                    <i th:class="${menu.icon}"></i>&nbsp;
+                    <span th:text="${menu.name}"></span>
+                </a>
             </li>
-            <li class="layui-nav-item"><a href="">云市场</a></li>
-            <li class="layui-nav-item"><a href="">发布商品</a></li>
         </ul>
     </div>
 </div>
