添加进出货信息

--- a/src/main/resources/templates/goods/goods_invoicing.html
+++ b/src/main/resources/templates/goods/goods_invoicing.html
@@ -22,8 +22,8 @@
             <div class="layui-inline">
                 <label class="layui-form-label">商品名称</label>
                 <div class="layui-input-block">
-                    <select name="code" lay-filter="category">
-                        <option value="" id="code">请选择商品名称</option>
+                    <select name="code" id="code" lay-filter="category">
+                        <option value="">请选择商品名称</option>
                     </select>
                 </div>
             </div>
